--- a/binary_sensors/time_date.yaml
+++ b/binary_sensors/time_date.yaml
@@ -1,5 +1,5 @@
-####################################
-# Date & Calendar Sensors
-####################################
+# ####################################
+# # Date & Calendar Sensors
+# ####################################
 - platform: workday
   country: GB
