--- a/configuration/media_player.yaml
+++ b/configuration/media_player.yaml
@@ -1,3 +1,6 @@
+####################################
+# Media Players
+####################################
 media_player:
   - platform: androidtv
     device_class: firetv
