--- a/configuration/notify.yaml
+++ b/configuration/notify.yaml
@@ -1,3 +1,6 @@
+####################################
+# Notification Targets
+####################################
 notify:
   - platform: nfandroidtv
     name: Bedroom TV
