--- a/configuration/scenes.yaml
+++ b/configuration/scenes.yaml
@@ -1,3 +1,6 @@
+####################################
+# Scenes
+####################################
 scene:
   - id: '1599502299025'
     name: Disable Automations
