--- a/configuration/switches.yaml
+++ b/configuration/switches.yaml
@@ -1,3 +1,6 @@
+####################################
+# Switches
+####################################
 switch:
   - platform: command_line
     switches:
