--- a/binary_sensors/presence.yaml
+++ b/binary_sensors/presence.yaml
@@ -1,21 +1,21 @@
-####################################
-# Presence Binary Sensors
-####################################
-####################################
-# People Home Binary Sensors
-####################################
-- platform: template
-  sensors:
-    people_home:
-      friendly_name: "People Home"
-      icon_template: "mdi:home"
-      device_class: presence
-      value_template: >-
-        {{ is_state('person.laura_ward', 'home') or is_state('person.sebastian_burrell', 'home') }}
+# ####################################
+# # Presence Binary Sensors
+# ####################################
+# ####################################
+# # People Home Binary Sensors
+# ####################################
+# # - platform: template
+# #   sensors:
+# #     people_home:
+# #       friendly_name: "People Home"
+# #       icon_template: "mdi:home"
+# #       device_class: presence
+# #       value_template: >-
+# #         {{ is_state('person.laura_ward', 'home') or is_state('person.sebastian_burrell', 'home') }}
 
-####################################
-# Bayesian Sensors
-####################################
+# ####################################
+# # Bayesian Sensors
+# ####################################
 - platform: bayesian
   name: "Kitchen Occupied"
   prior: 0.5
@@ -25,7 +25,6 @@
       value_template: "{{ (states('sensor.bathroom_multisensor_humidity_air')| float > (states('sensor.bathroom_average_humidity')| float + states('input_number.bathroom_humidity_offset')| float)) }}"
       prob_given_true: 0.7
       prob_given_false: 0.3
-      to_state: "on"
     - platform: "state"
       entity_id: "binary_sensor.bathroom_humidity_trend"
       prob_given_true: 0.7
