--- a/configuration/binary_sensors.yaml
+++ b/configuration/binary_sensors.yaml
@@ -1,4 +1,4 @@
 ####################################
 # Binary Sensors
 ####################################
-binary_sensor: !include_dir_list ../binary_sensors
+binary_sensor: !include_dir_merge_list ../binary_sensors
