--- a/configuration/recorder.yaml
+++ b/configuration/recorder.yaml
@@ -1,3 +1,6 @@
+####################################
+# Recorder
+####################################
 recorder:
   db_url: !secret mariadb
   purge_keep_days: 60
