--- a/sensors/distances.yaml
+++ b/sensors/distances.yaml
@@ -1,13 +1,13 @@
 ####################################
 # Distances
 ####################################
-platform: template
-sensors:
-  laura_distance_from_home:
-    friendly_name: "Laura's Distance from Home"
-    unit_of_measurement: "km"
-    value_template: "{{ distance('person.laura_ward', 'zone.home') | round(2) }}"
-  seb_distance_from_home:
-    friendly_name: "Seb's Distance from Home"
-    unit_of_measurement: "km"
-    value_template: "{{ distance('person.sebastian_burrell', 'zone.home') | round(2) }}"
+- platform: template
+  sensors:
+    laura_distance_from_home:
+      friendly_name: "Laura's Distance from Home"
+      unit_of_measurement: "km"
+      value_template: "{{ distance('person.laura_ward', 'zone.home') | round(2) }}"
+    seb_distance_from_home:
+      friendly_name: "Seb's Distance from Home"
+      unit_of_measurement: "km"
+      value_template: "{{ distance('person.sebastian_burrell', 'zone.home') | round(2) }}"
