--- a/sensors/climate.yaml
+++ b/sensors/climate.yaml
@@ -2,25 +2,28 @@
 # Climate Sensors
 ####################################
 - platform: season
+####################################
+# Average Room Temperatures
+####################################
 - platform: template
   sensors:
-    downstairs_temp:
-      friendly_name: "Downstairs Temperature"
-      device_class: temperature
-      value_template: "{{ state_attr('climate.heating', 'current_temperature') }}"
-    study_temp:
-      friendly_name: "Study Temperature"
-      device_class: temperature
-      value_template: "{{ state_attr('climate.study', 'current_temperature') }}"
-    bathroom_temp:
+    bathroom_temperature:
       friendly_name: "Bathroom Temperature"
       device_class: temperature
-      value_template: "{{ state_attr('climate.bathroom', 'current_temperature') }}"
-    bedroom_temp:
+      value_template: "{{ ((states('sensor.bathroom_current_temperature') | float + states('sensor.bathroom_multisensor_air_temperature') | float)/2) | round(1) }}"
+    bedroom_temperature:
       friendly_name: "Bedroom Temperature"
       device_class: temperature
-      value_template: "{{ state_attr('climate.bedroom', 'current_temperature') }}"
-    toilet_temp:
+      value_template: "{{ ((states('sensor.bedroom_current_temperature') | float + states('sensor.bedroom_trisensor_air_temperature') | float)/2) | round(1) }}"
+    central_temperature:
+      friendly_name: "Central Temperature"
+      device_class: temperature
+      value_template: "{{ ((states('sensor.central_current_temperature') | float + states('sensor.hall_trisensor_air_temperature') | float + states('sensor.lounge_trisensor_air_temperature') | float + states('sensor.kitchen_trisensor_air_temperature') | float )/4) | round(1) }}"
+    study_temperature:
+      friendly_name: "Study Temperature"
+      device_class: temperature
+      value_template: "{{ ((states('sensor.study_current_temperature') | float + states('sensor.study_trisensor_air_temperature') | float)/2) | round(1) }}"
+    toilet_temperature:
       friendly_name: "Toilet Temperature"
       device_class: temperature
-      value_template: "{{ state_attr('climate.toilet', 'current_temperature') }}"
+      value_template: "{{ ((states('sensor.toilet_current_temperature') | float + states('sensor.toilet_trisensor_air_temperature') | float)/2) | round(1) }}"
