--- a/binary_sensors/presence.yaml
+++ b/binary_sensors/presence.yaml
@@ -4,14 +4,14 @@
 # ####################################
 # # People Home Binary Sensors
 # ####################################
-# # - platform: template
-# #   sensors:
-# #     people_home:
-# #       friendly_name: "People Home"
-# #       icon_template: "mdi:home"
-# #       device_class: presence
-# #       value_template: >-
-# #         {{ is_state('person.laura_ward', 'home') or is_state('person.sebastian_burrell', 'home') }}
+- platform: template
+  sensors:
+    people_home:
+      friendly_name: "People Home"
+      icon_template: "mdi:home"
+      device_class: presence
+      value_template: >-
+        {{ is_state('person.laura_ward', 'home') or is_state('person.sebastian_burrell', 'home') }}
 
 # ####################################
 # # Bayesian Sensors
