--- a/customize.yaml
+++ b/customize.yaml
@@ -8,3 +8,5 @@ sensor.toilet_average_lux:
   icon: mdi:white-balance-sunny
 binary_sensor.shower_occupied:
   icon: mdi:shower-head
+sensor.bathroom_humidity_statistics:
+  icon: mdi:water-percent
