--- a/binary_sensors/system.yaml
+++ b/binary_sensors/system.yaml
@@ -10,4 +10,8 @@
       friendly_name: "Seb PC Active"
       device_class: connectivity
       value_template: >-
-        {{ states('sensor.time_since_last_active') | int < 5 }}
+        {% if is_state('binary_sensor.seb_pc_online', 'off' ) %}
+          'off'
+        {% else %}
+          {{ states('sensor.time_since_pc_last_active') | int < 5 }}
+        {% endif %}
