--- a/binary_sensors/trend.yaml
+++ b/binary_sensors/trend.yaml
@@ -5,8 +5,11 @@
   sensors:
     bathroom_humidity_trend:
       entity_id: sensor.bathroom_multisensor_humidity_air
-      sample_duration: 1800
-      max_samples: 10
-      min_gradient: -0.00083
-      invert: true
+      sample_duration: 1200
       device_class: moisture
+- platform: trend
+  sensors:
+    bathroom_temperature_trend:
+      entity_id: sensor.bathroom_temperature
+      sample_duration: 1200
+      device_class: heat
