--- a/configuration/scripts.yaml
+++ b/configuration/scripts.yaml
@@ -18,10 +18,10 @@ script:
     alias: Play Rain Sounds
     sequence:
     - data:
-        entity_id: media_player.bedroom
+        entity_id: media_player.bedroom_echo
         media_content_id: amzn1.ask.skill.89bb8c9b-6f47-4f93-9a40-7c572ade7ea3
         media_content_type: skill
-      entity_id: media_player.bedroom
+      entity_id: media_player.bedroom_echo
       service: media_player.play_media
   endeavor_startup:
     alias: Endeavor - Startup
