Add rounding to total energy usage sensor

--- a/sensors/energy.yaml
+++ b/sensors/energy.yaml
@@ -28,7 +28,7 @@
       friendly_name: Total Energy Usage
       device_class: power
       unit_of_measurement: "kWh"
-      value_template: "{{ states('sensor.gas_daily_usage') | float + states('sensor.electricity_daily_usage') | float }}"
+      value_template: "{{ (states('sensor.gas_daily_usage') | float + states('sensor.electricity_daily_usage') | float) | round(2) }}"
       attribute_templates:
         interval_start: "{{ strptime(state_attr('sensor.gas_daily_usage', 'interval_start'),'%Y-%m-%dT%H:%M:%SZ').strftime('%d/%m/%Y') }}"
         interval_end: "{{ strptime(state_attr('sensor.gas_daily_usage', 'interval_end'),'%Y-%m-%dT%H:%M:%SZ').strftime('%d/%m/%Y') }}"
