Add ratios for Frigate object detection sensors

--- a/sensors/statistics.yaml
+++ b/sensors/statistics.yaml
@@ -110,13 +110,71 @@
 ####################################
 # Ratios
 ####################################
+# Entrance
+- platform: history_stats
+  name: "Ratio Entrance Dog Motion"
+  entity_id: binary_sensor.entrance_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Entrance Person Motion"
+  entity_id: binary_sensor.entrance_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Entrance Door Open"
+  entity_id: binary_sensor.entrance_door
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Entrance Door Motion"
+  entity_id: binary_sensor.front_door_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Entrance Door Ding"
+  entity_id: binary_sensor.front_door_ding
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+
 # Bathroom
 - platform: history_stats
   name: "Ratio Bathroom Motion"
   entity_id: binary_sensor.bathroom_multisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Shower Occupied"
+  entity_id: binary_sensor.shower_occupied
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Bathroom Humidity Trend"
+  entity_id: binary_sensor.bathroom_humidity_trend
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Bathroom Temperature Trend"
+  entity_id: binary_sensor.bathroom_temperature_trend
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 
 # Bedroom
@@ -125,21 +183,35 @@
   entity_id: binary_sensor.bedroom_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Bedroom Person Motion"
+  entity_id: binary_sensor.bedroom_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Bedroom Dog Motion"
+  entity_id: binary_sensor.bedroom_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Seb Bedroom Presence"
   entity_id: sensor.seb_phone_ble_room_presence
   state: "Bedroom"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Laura Bedroom Presence"
   entity_id: sensor.laura_phone_ble_room_presence
   state: "Bedroom"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 
 # Hall
@@ -148,7 +220,21 @@
   entity_id: binary_sensor.hall_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Hall Dog Motion"
+  entity_id: binary_sensor.hall_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Hall Person Motion"
+  entity_id: binary_sensor.hall_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 
 # Kitchen
@@ -157,21 +243,35 @@
   entity_id: binary_sensor.kitchen_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Seb Kitchen Presence"
   entity_id: sensor.seb_phone_ble_room_presence
   state: "Kitchen"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Laura Kitchen Presence"
   entity_id: sensor.laura_phone_ble_room_presence
   state: "Kitchen"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Kitchen Dog Motion"
+  entity_id: binary_sensor.kitchen_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Kitchen Person Motion"
+  entity_id: binary_sensor.kitchen_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 
 # Lounge
@@ -180,22 +280,53 @@
   entity_id: binary_sensor.lounge_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Seb Lounge Presence"
   entity_id: sensor.seb_phone_ble_room_presence
   state: "Lounge"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Laura Lounge Presence"
   entity_id: sensor.laura_phone_ble_room_presence
   state: "Lounge"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Lounge Dog Motion"
+  entity_id: binary_sensor.lounge_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Lounge Person Motion"
+  entity_id: binary_sensor.lounge_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+
+# Stairs
+- platform: history_stats
+  name: "Ratio Stairs Dog Motion"
+  entity_id: binary_sensor.stairs_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Stairs Person Motion"
+  entity_id: binary_sensor.stairs_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+
 
 # Study
 - platform: history_stats
@@ -203,28 +334,42 @@
   entity_id: binary_sensor.seb_pc_active
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Study Motion"
   entity_id: binary_sensor.study_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Seb Study Presence"
   entity_id: sensor.seb_phone_ble_room_presence
   state: "Study"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 - platform: history_stats
   name: "Ratio Laura Study Presence"
   entity_id: sensor.laura_phone_ble_room_presence
   state: "Study"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Study Dog Motion"
+  entity_id: binary_sensor.study_dog_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
+  end: "{{ now() }}"
+- platform: history_stats
+  name: "Ratio Study Person Motion"
+  entity_id: binary_sensor.study_person_motion
+  state: "on"
+  type: ratio
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
 
 # Toilet
@@ -233,5 +378,5 @@
   entity_id: binary_sensor.toilet_trisensor_motion
   state: "on"
   type: ratio
-  start: "{{ now() - timedelta(days=1) }}"
+  start: "{{ now() - timedelta(days=7) }}"
   end: "{{ now() }}"
