--- a/configuration.yaml
+++ b/configuration.yaml
@@ -3,3 +3,6 @@ homeassistant:
   customize: !include customize.yaml
 
 automation: !include automations.yaml
+
+frontend:
+  themes: !include_dir_merge_named themes
